# galactus

./: .gitignore  pyproject.toml
SignIos/: go.mod  go.sum  main.go  编译备注.txt
SignIos/common/: devices.go  gzip.go  token.go  uuid.go  zlib.go
SignIos/conf/: app.conf
SignIos/controllers/: DY.go  Duoshan.go  Jisu.go  base.go  device.go  mssdk.go
SignIos/ios/: ios.go
SignIos/proto/: Token.pb.go  Token.proto  XArgus.pb.go  XArgus.proto  toJson.go
SignIos/routers/: router.go
SignIos/script/: build.sh  deploy_1.sh  init.sh  start.sh  stop.sh
SignIos/test/: test.go
SignIos/utils/: Dy.go  Encrypt.go  Key.go  byte.go  hex.go  qqq.py  struct.go  xtea.go
blade/: README.md  cmd.go  deploy_1.sh  go.mod  go.sum  init.sh  main.go  start.sh
blade/a/: a.go  init.go
blade/cmd/: cmd.go  cobra.go  demo1.go  main.go  test.go
blade/configs/: application.properties
blade/initialization/: initialization.go
blade/routers/: register.go  routers.go
blade/script/: build.sh  deploy_1.sh  start.sh  stop.sh
blade/test/: test.go
common/: go.mod  go.sum
common/configs/: application.properties
common/converter/: convert.go
epusdt/src/: go.sum
x_plugin/: README.md  build.sh  deploy_1.sh  init.sh  package-lock.json  package.json  server.js  start.sh  stop.sh
x_plugin/collection_device/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
x_plugin/dy/: README.md  a_bogus.js  a_bogus_192.js  application.js  env.js  package.json  pnpm-lock.yaml  router.js  server.js  sign.js  test.js  xlog.js
x_plugin/dy_love/: README.md  package-lock.json  (+2 more)
(+98 files in other folders)
