[tool.poetry]
name = "gibraltar"
version = "0.1.0"
description = "LLM AGENT"
authors = ["huisheng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
## ai
openai="^1.1.0"
## network io
tenacity="8.2.2"
requests="^2.31.0"
## db 
sqlalchemy = "^2.0.27"
## cache
redis = "3.5.3"
redis-py-cluster = "^2.1.3"
## excel 
openpyxl="3.1.2"
## llama_index
llama-index="0.9.21"
## gevent
gevent="22.10.2"
qdrant-client = "^1.7.3"
nebula3-python = "^3.5.0"
flask = "^3.0.2"
pymysql = "^1.1.0"
confluent-kafka="2.5.0"
uwsgi="2.0.24"

spacy="3.7.4"
pydub = "^0.25.1"
arrow = "^1.3.0"
aliyun-python-sdk-core = "2.13.3"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

pysbd="0.3.4"
jupyter = "^1.1.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
